# precommit-tmdl-formatter

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build_validation.yaml
src/formatter/measures/: sorting.py
src/tmdl_column_names/: __main__.py
src/tmdl_format_column_names/: __main__.py  replace_column_name.py  replace_column_name_references.py
src/tmdl_format_measures/: __main__.py  sorting.py
src/tmdl_formatter/: __main__.py
src/tmdl_formatter/measures/: sorting.py
tests/: conftest.py  measures_sorted.tmdl
tests/formatter/measures/: test_sorting.py
tests/tmdl_column_names/: test_replace_column_name.py
tests/tmdl_format_column_names/: test_replace_column_name.py  test_replace_column_name_references.py
tests/tmdl_format_measures/: test_sorting.py
tests/tmdl_formatter/measures/: test_sorting.py
