[tool.poetry]
name = "precommit-tmdl-formatter"
version = "0.1.0"
description = ""
authors = ["Robert ter Luun <rterluun@ilionx.com>"]
readme = "README.md"
packages = [
  { include = "formatter", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.0.1"
nox = "2024.10.9"
black = "24.10.0"
isort = "5.13.2"
flake8 = "7.1.1"
mypy = "1.14.0"
coverage = "7.6.9"
pytest = "8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.flake8]
max-line-length = 120
count = true

[tool.mypy]
exclude = ["^noxfile\\.py$", "^tests/conftest.py$"]
